Update personal information

--- a/Nexus/Views/Shared/_LayoutV2.cshtml
+++ b/Nexus/Views/Shared/_LayoutV2.cshtml
@@ -101,7 +101,7 @@
                 <div class="col-md-12" style="text-align: center">
                     <ul class="social-icons">
                         <li>
-                            <a href="https://www.linkedin.com/in/ozan-%C3%B6zten-3088b6148/" target="_blank">
+                            <a href="https://www.linkedin.com/in/ozan-özten-6a7502186" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fas fa-circle fa-stack-2x"></i>
                                     <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
@@ -125,7 +125,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p>Built with ASP.NET Core 2.2 & EF Core 2.2 and hosted on Ubuntu Xenial Xerus.</p>
+                    <p>Built with ASP.NET Core 3.0 and hosted on Ubuntu Xenial Xerus.</p>
                     <p>Ozan Ozten, 2018 - @DateTime.Now.Year.</p>
                 </div>
                 <div class="col-md-12" style="background-color: #86babc; height: 3px;">
