Install AdminLTE as an npm package

--- a/Nexus/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/Nexus/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -22,8 +22,10 @@
 
     <link rel="stylesheet" href="~/node/@@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="~/node/ionicons/dist/css/ionicons.min.css">
-    <link rel="stylesheet" href="~/css/adminLTE/AdminLTE.min.css">
-    <link rel="stylesheet" href="~/css/adminLTE/skins/skin-blue.min.css">
+
+    <link rel="stylesheet" href="~/node/admin-lte/dist/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="~/node/admin-lte/dist/css/skins/skin-blue.min.css">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
     <link href="~/node/toastr/build/toastr.min.css" rel="stylesheet" />
     <link href="~/node/select2/dist/css/select2.css" rel="stylesheet" />
@@ -37,7 +39,9 @@
     <script src="~/node/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/node/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="/node/jquery-validation-unobtrusive/dist/jquery.validate.unobtrusive.min.js"></script>
-    <script src="~/js/adminLTE/adminlte.min.js"></script>
+    
+    <script src="~/node/admin-lte/dist/js/adminlte.min.js"></script>
+
     <script src="~/node/toastr/build/toastr.min.js"></script>
     <script src="~/node/select2/dist/js/select2.js"></script>
     <script src="~/node/icheck/icheck.js"></script>
