Remove Bootstrap 4 stuff

--- a/Nexus/Views/Shared/_LayoutV2.cshtml
+++ b/Nexus/Views/Shared/_LayoutV2.cshtml
@@ -12,14 +12,14 @@
     <title>@ViewData["Title"]</title>
 
     @*<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">*@
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">*@
     <environment names="Development">
-        <link href="~/css/bootstrap-4.2.1/css/bootstrap.css" rel="stylesheet" />
+        <link href="~/node/bootstrap4/dist/css/bootstrap.css" rel="stylesheet" />
         <link href="~/node/@@fortawesome/fontawesome-free/css/all.css" rel="stylesheet" />
         <link href="~/node/highlightjs/styles/default.css" />
     </environment>
     <environment names="Staging,Production">
-        <link href="~/css/bootstrap-4.2.1/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="~/node/bootstrap4/dist/css/bootstrap-4.2.1/css/bootstrap.min.css" rel="stylesheet" />
         <link href="~/node/@@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
         @*<link href="~/node/highlightjs/styles/default.css"/>*@
     </environment>
