--- a/Nexus/Views/Shared/_LayoutV2.cshtml
+++ b/Nexus/Views/Shared/_LayoutV2.cshtml
@@ -76,8 +76,8 @@
                         @{
                             if (HttpContextAccessor.HttpContext.User.IsInRole("Administrator"))
                             {
-                                int numberOfTagsSetting = 25;
-                                await Html.RenderPartialAsync("_tagsLeftMenuPartial", TagService.GetTopNTagsAlongWithUsageInfo(numberOfTagsSetting, true, true));
+                                int numberOfTagsSetting = 50;
+                                await Html.RenderPartialAsync("_tagsLeftMenuPartial", TagService.GetTopNTagsAlongWithUsageInfo(true, true, numberOfTagsSetting));
                                 //await Html.RenderPartialAsync("_tagsLeftMenuPartialSimple", TagService.GetTopNTagsWithAtLeastOneNote(0, true));
                             }
                             else
