Change footer text

--- a/Nexus/Views/Shared/_LayoutV2.cshtml
+++ b/Nexus/Views/Shared/_LayoutV2.cshtml
@@ -125,8 +125,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p>Built with ASP.NET Core 3.0 and hosted on Ubuntu Xenial Xerus.</p>
-                    <p>Ozan Ozten, 2018 - @DateTime.Now.Year.</p>
+                    <p>Ozan Ozten 2018 - @DateTime.Now.Year</p>
                 </div>
                 <div class="col-md-12" style="background-color: #86babc; height: 3px;">
                 </div>
