Update the social icons (Add github account address)

--- a/Nexus/Views/Shared/_LayoutV2.cshtml
+++ b/Nexus/Views/Shared/_LayoutV2.cshtml
@@ -101,6 +101,14 @@
                 <div class="col-md-12" style="text-align: center">
                     <ul class="social-icons">
                         <li>
+                            <a href="https://github.com/oznoztn" target="_blank">
+                                <span class="fa-stack fa-lg">
+                                    <i class="fas fa-circle fa-stack-2x"></i>
+                                    <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                </span>
+                            </a>
+                        </li>
+                        <li>
                             <a href="https://www.linkedin.com/in/ozan-özten-6a7502186" target="_blank">
                                 <span class="fa-stack fa-lg">
                                     <i class="fas fa-circle fa-stack-2x"></i>
