Change the title from 'Nexus' to 'Ozan Özten'

--- a/Nexus/Views/Notes/Index.cshtml
+++ b/Nexus/Views/Notes/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Nexus.Models
 @model Nexus.Controllers.NoteViewModel
 @{
-    ViewData["Title"] = "Nexus";
+    ViewData["Title"] = "Ozan Özten";
 }
 
 @if (Model?.Notes != null)
