--- a/Nexus/Views/Notes/Note.cshtml
+++ b/Nexus/Views/Notes/Note.cshtml
@@ -1,7 +1,7 @@
 ﻿@inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
 @model NoteDto
 @{
-    ViewData["Title"] = $"{Model.Title} - Nexus";
+    ViewData["Title"] = $"{Model.Title} - Ozan Özten";
 }
 
 @{
