--- a/Nexus/Views/Shared/_LayoutV2.cshtml
+++ b/Nexus/Views/Shared/_LayoutV2.cshtml
@@ -86,9 +86,9 @@
                             }
                         }
                     </div>
-                    <div id="archive">
+                    @*<div id="archive">
                         <h5>Archive</h5>
-                    </div>
+                    </div>*@
                 </div>
             </div>
         </div>
@@ -133,7 +133,7 @@
                             </a>
                         </li>
                     </ul>
-                    <p>Ozan Ozten 2018 - @DateTime.Now.Year</p>
+                    <p>Ozan Özten 2018 - @DateTime.Now.Year</p>
                 </div>
                 <div class="col-md-12" style="background-color: #86babc; height: 3px;">
                 </div>
