Fix bootstrap 4 path

--- a/Nexus/Views/Shared/_LayoutV2.cshtml
+++ b/Nexus/Views/Shared/_LayoutV2.cshtml
@@ -19,7 +19,7 @@
         <link href="~/node/highlightjs/styles/default.css" />
     </environment>
     <environment names="Staging,Production">
-        <link href="~/node/bootstrap4/dist/css/bootstrap-4.2.1/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="~/node/bootstrap4/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="~/node/@@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet" />
         @*<link href="~/node/highlightjs/styles/default.css"/>*@
     </environment>
